--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         </div>
       </section>
     </main>
+    <script src="src/script/Data.js"></script>
     <script src="src/script/teste.js"></script>
+    <!-- <script src="src/script/FunctionCart.js"></script> -->
   </body>
 </html>
