correção de bugs

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="modal-container">
       <div class="modal"></div>
     </div>
-    <main>
+    <main id ="main">
       <section aria-labelledby="menu-title" id="menu">
         <h1>Desserts</h1>
 
@@ -27,7 +27,8 @@
       </section>
     </main>
     <script src="src/script/Data.js"></script>
-    <script src="src/script/teste.js"></script>
+    <script src="src/script/FunctionCart.js"></script>
+    <script src="src/script/script.js"></script>
     <!-- <script src="src/script/FunctionCart.js"></script> -->
   </body>
 </html>
